# 3D_touch_haptic_touch

./: README.md
cpp_read_and_write_data_from_haptic_3d_touch/: Makefile  read_force  read_force.cpp
openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/QuickHaptics/examples/EarthSpin/EarthSpinGLUT/: EarthSpinGLUT
openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/QuickHaptics/examples/SimpleSphere/SimpleSphereGLUT/: SimpleSphereGLUT
openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/QuickHaptics/examples/pickApples/pickApplesGLUT/: pickApplesGLUT
python_read_and_write_data_from_haptic_3d_touch/: CMakeLists.txt  requirements.txt
python_read_and_write_data_from_haptic_3d_touch/examples/: haptic_demo.py
python_read_and_write_data_from_haptic_3d_touch/include/: haptic_lib.h
python_read_and_write_data_from_haptic_3d_touch/src/: haptic_binding.cpp  haptic_lib.cpp
